network-policies/allow-backend-db.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-backend-db
spec:
  podSelector:
    matchLabels:
      app: mongodb
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: todo-app-jgsqware-server
