network-policies/allow-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress
spec:
  podSelector:
    matchLabels:
      tier: api
  ingress:
  - from: []
